[project]
name = "europeana-db"
version = "0.1.0"
description = "Project to collect and filter data from europeana database."
authors = [{ name = "Vagner I. de Oliveira", email = "vagner.inol@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "python-dotenv (>=1.0.1,<2.0.0)",
  "requests (>=2.32.3,<3.0.0)",
  "tqdm (>=4.67.1,<5.0.0)",
  "pillow (>=11.1.0,<12.0.0)",
  "pycountry (>=24.6.1,<25.0.0)",
  "deep-translator (>=1.11.4,<2.0.0)",
  "debugpy (>=1.8.12,<2.0.0)",
  "lingua-language-detector (>=1.4.0,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
